--- a/web/iniciar_sesion.html
+++ b/web/iniciar_sesion.html
@@ -86,8 +86,8 @@
 					<!-- Signup 
 					names:
 						user_signup
-						pwd1_signup
-						pwd2_signup
+						pwd_signup_1
+						pwd_signup_2
 						email_signup
 						age_signup
 						distric_signup
@@ -100,8 +100,10 @@
 								<div class="input-group-prepend">
 									<i class="input-group-text material-icons">person</i>
 								</div>
-								<input class="form-control" type="text" placeholder="Usuario" name="user_signup_2">
+								<input class="form-control" type="text" placeholder="Usuario" id="user_signup" name="user_signup">
 							</div>
+							<!-- Alert Usuario -->
+							<div class="mb-3"></div>
 							<!-- Password -->
 							<div class="input-group mb-3">
 								<div class="input-group-prepend">
@@ -116,7 +118,7 @@
 								<div class="input-group-prepend">
 									<i class="input-group-text material-icons">vpn_key</i>
 								</div>
-								<input class="form-control" type="password" placeholder="Repitir la contraseña" id="pwd_signup_2" name="pwd2_signup">
+								<input class="form-control" type="password" placeholder="Repitir la contraseña" id="pwd_signup_2" name="pwd_signup_2">
 							</div>
 							<!-- Alert Contraseña incorrecta -->
 							<div class="mb-3"></div>
@@ -156,7 +158,7 @@
 							<div class="mb-3"></div>
 							<!-- Button -->
 							<div class="d-flex justify-content-center">
-								<button class="btn btn-primary pr-5 pl-5" type="button">Registrarse</button>
+								<button class="btn btn-primary pr-5 pl-5" id="btn_signup" type="button">Registrarse</button>
 							</div>
 						</form>
 					</div>
