--- a/web/index.html
+++ b/web/index.html
@@ -15,6 +15,7 @@
 	<script type="text/javascript">
 		function make() {
 			makeNav(-2);
+			makeCarousel():
 		}
 		$(document).ready(make);
 	</script>
@@ -34,7 +35,35 @@
 	</nav>
 
 	<section class="container">
-		<article class="container mt-5 row"></article>
+		<article class="container mt-5 row">
+			<div id="imgs" class="carousel slide" data-ride="carousel">
+				<!-- indicador -->
+				<ul class="carousel-indicators" id="indicador">
+					<li data-target="#imgs" data-slide-to="0" class="active"></li>
+					<li data-target="#imgs" data-slide-to="1"></li>
+					<li data-target="#imgs" data-slide-to="2"></li>
+				</ul>
+				<!-- imagenes -->
+				<div class="carousel-inner" id="imagenes">
+					<div class="carousel-item active">
+						<img src="la.jpg" alt="Los Angeles" width="1100" height="500">
+					</div>
+					<div class="carousel-item">
+						<img src="chicago.jpg" alt="Chicago" width="1100" height="500">
+					</div>
+					<div class="carousel-item">
+						<img src="ny.jpg" alt="New York" width="1100" height="500">
+					</div>
+				</div>
+				<!-- botones IZQ y DER -->
+				<a class="carousel-control-prev" href="#imgs" data-slide="prev">
+					<span class="carousel-control-prev-icon"></span>
+				</a>
+				<a class="carousel-control-next" href="#imgs" data-slide="next">
+					<span class="carousel-control-next-icon"></span>
+				</a>
+			</div>
+		</article>
 	</section>
 	
 	<footer class="container-fluid bg-dark text-center pt-3">
