actualizacion home y iniciar_sesion

--- a/web/index.html
+++ b/web/index.html
@@ -35,8 +35,7 @@
 	</nav>
 
 	<section class="container">
-		<article class="container mt-3 mx-0 row d-flex justify-content-center">
-			<div class="col-md"></div>
+		<article class="container mt-4 mx-0 d-flex justify-content-center">
 			<div id="imgs" class="carousel slide col-lg-8 col-md-10 col-12" data-ride="carousel">
 				<!-- indicador -->
 				<ul class="carousel-indicators" id="indicador"></ul>
@@ -50,15 +49,19 @@
 					<span class="carousel-control-next-icon"></span>
 				</a>
 			</div>
-			<div class="col-md"></div>
 		</article>
-		<article class="container mt-3 text-center">
-			<p>En esta pagina se publican eventos en diferentes barrios de madrid indicando el tipo de hobbies que están implicado para poder apuntarte a uno de los eventos debes estar registrado y haber iniciado sesión, si no estás registrado a que esperas, ¡unete a nuestra comunidad!</p>
-			<p class="mb-0"><b>Si creas una cuenta tendras muchas ventasjas:</b></p>
-			<p class="mb-0">-Te mostraremos eventos segun tus intereses</p>
-			<p class="mb-0">-Podras ver quienes se han apuntado a los eventos</p>
-			<p class="mb-0">-Tendras un registro de los eventos</p>
-			<p>-Puedes comentar los eventos a los que asististe</p>
+		<article class="container mt-3 mx-0 text-justify d-flex justify-content-center">
+			<div class="col-lg-10 col-12">
+				<p>En esta pagina se publican eventos en diferentes barrios de madrid indicando el tipo de hobbies que están implicado para poder apuntarte a uno de los eventos debes estar registrado y haber iniciado sesión, si no estás registrado a que esperas, ¡unete a nuestra comunidad!</p>
+				<div class="container">
+					<p class="mb-0"><b>Si creas una cuenta tendras muchas ventasjas:</b></p>
+					<p class="mb-0"> -Te mostraremos eventos segun tus intereses</p>
+					<p class="mb-0"> -Podras ver quienes se han apuntado a los eventos</p>
+					<p class="mb-0"> -Tendras un registro de los eventos</p>
+					<p>-Puedes comentar los eventos a los que asististe</p>
+				</div>
+			</div>
+			
 		</article>
 	</section>
 	
