--- a/web/iniciar_sesion.html
+++ b/web/iniciar_sesion.html
@@ -37,8 +37,7 @@
 	</nav>
 
 	<section class="container">
-		<article class="container mt-5 row">
-			<div class="col"></div>
+		<article class="container mt-5 d-flex justify-content-center">
 			<div class="col-lg-6 col-md-8 col-10">
 				<!-- Pestañas -->
 				<ul class="nav nav-tabs">
@@ -163,8 +162,6 @@
 						</form>
 					</div>
 				</div>
-			</div>
-			<div class="col">
 			</div>
 		</article>
 	</section>
