--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -52,12 +52,12 @@
 		</article>
 		<article class="container mt-3 mx-0 text-justify d-flex justify-content-center">
 			<div class="col-lg-10 col-12">
-				<p>En esta pagina se publican eventos en diferentes barrios de madrid indicando el tipo de hobbies que están implicado para poder apuntarte a uno de los eventos debes estar registrado y haber iniciado sesión, si no estás registrado a que esperas, ¡unete a nuestra comunidad!</p>
+				<p class="mb-2">En esta pagina se publican eventos en diferentes barrios de madrid indicando el tipo de hobbies que están implicado para poder apuntarte a uno de los eventos debes estar registrado y haber iniciado sesión, si no estás registrado a que esperas, ¡unete a nuestra comunidad!</p>
 				<div class="container">
-					<p class="mb-0"><b>Si creas una cuenta tendras muchas ventasjas:</b></p>
-					<p class="mb-0"> -Te mostraremos eventos segun tus intereses</p>
-					<p class="mb-0"> -Podras ver quienes se han apuntado a los eventos</p>
-					<p class="mb-0"> -Tendras un registro de los eventos</p>
+					<p><b>Si creas una cuenta tendras muchas ventasjas:</b></p>
+					<p> -Te mostraremos eventos segun tus intereses</p>
+					<p> -Podras ver quienes se han apuntado a los eventos</p>
+					<p> -Tendras un registro de los eventos</p>
 					<p>-Puedes comentar los eventos a los que asististe</p>
 				</div>
 			</div>
